--- a/package.json
+++ b/package.json
@@ -30,13 +30,17 @@
     "uninstall-husky": "npm uninstall husky --no-save && git config --unset core.hooksPath && npx rimraf .husky",
     "release": "commit-and-tag-version"
   },
+  "dependencies": {
+    "workbox-build": "^7.0.0"
+  },
   "devDependencies": {
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.20",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^1.3.1",
     "commit-and-tag-version": "^12.2.0",
+    "conventional-changelog-aaron-preset": "^0.2.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
