--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "release": "commit-and-tag-version"
   },
   "dependencies": {
+    "fast-json-stable-stringify": "^2.1.0",
+    "pathe": "^1.1.2",
     "workbox-build": "^7.0.0"
   },
   "devDependencies": {
+    "@rspack/cli": "^0.5.4",
+    "@rspack/core": "^0.5.4",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.20",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -41,18 +45,27 @@
     "@vitest/coverage-v8": "^1.3.1",
     "commit-and-tag-version": "^12.2.0",
     "conventional-changelog-aaron-preset": "^0.2.3",
+    "copy-webpack-plugin": "^12.0.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "globby": "^14.0.1",
+    "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "memfs": "^4.7.7",
+    "module-alias": "^2.2.3",
     "prettier": "^3.2.5",
+    "pretty-bytes": "^6.1.1",
+    "service-worker-mock": "^2.0.5",
+    "tempy": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
     "vite-plugin-dts": "^3.7.3",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack": "^5.90.3"
   }
 }
