--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "workbox-build": "^7.0.0"
   },
   "devDependencies": {
-    "@rspack/cli": "^0.5.4",
-    "@rspack/core": "^0.5.4",
+    "@rspack/cli": "^0.5.6",
+    "@rspack/core": "^0.5.6",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.20",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -51,6 +51,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "fs-extra": "^11.2.0",
     "globby": "^14.0.1",
     "html-webpack-plugin": "^5.6.0",
     "husky": "^9.0.11",
