--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "license": "MIT",
   "author": "Aaron Zhou",
   "packageManager": "pnpm@8.6.3",
-  "main": "./dist/vite-ts-lib-starter.cjs",
-  "module": "./dist/vite-ts-lib-starter.mjs",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "type": "module",
   "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/vite-ts-lib-starter.cjs",
-      "import": "./dist/vite-ts-lib-starter.mjs"
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js"
     }
   },
   "scripts": {
@@ -60,6 +60,7 @@
     "module-alias": "^2.2.3",
     "prettier": "^3.2.5",
     "pretty-bytes": "^6.1.1",
+    "rollup-plugin-node-externals": "^7.0.1",
     "service-worker-mock": "^2.0.5",
     "tempy": "^3.1.0",
     "ts-node": "^10.9.2",
