--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc && vite build",
+    "analyze": "vite-bundle-visualizer",
     "test": "vitest",
     "test:update": "vitest --update",
     "test:run": "vitest --run --changed",
@@ -56,7 +57,11 @@
   "dependencies": {
     "fast-json-stable-stringify": "^2.1.0",
     "pathe": "^1.1.2",
+    "pretty-bytes": "^6.1.1",
     "workbox-build": "^7.0.0"
+  },
+  "peerDependencies": {
+    "@rspack/core": ">=0.5.6"
   },
   "devDependencies": {
     "@rspack/cli": "^0.5.6",
@@ -82,13 +87,13 @@
     "memfs": "^4.7.7",
     "module-alias": "^2.2.3",
     "prettier": "^3.2.5",
-    "pretty-bytes": "^6.1.1",
     "rollup-plugin-node-externals": "^7.0.1",
     "service-worker-mock": "^2.0.5",
     "tempy": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
     "vite": "^5.1.4",
+    "vite-bundle-visualizer": "^1.0.1",
     "vite-plugin-dts": "^3.7.3",
     "vitest": "^1.3.1",
     "webpack": "^5.90.3",
